# MEASaveEditor

./: CMakeLists.txt  build.sh  make-prefix.sh
.github/workflows/: build-windows.yml  prepare-prefix-windows.yml
src/: CMakeLists.txt  main.cpp
src/mease/ui/: mainwindow.cpp  mainwindow.hpp
